recovered/vearis/unzipped/COO/CloudOps/zorion/backups/20250326_221528/iptables_backup.rules
# Generated by iptables-save v1.8.9 (nf_tables) on Thu Mar 27 05:15:29 2025
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A FORWARD -i eth0 -o eth7 -j ACCEPT
-A FORWARD -i eth1 -o eth7 -j ACCEPT
-A FORWARD -i eth2 -o eth7 -j ACCEPT
-A FORWARD -i eth3 -o eth7 -j ACCEPT
-A FORWARD -i eth4 -o eth7 -j ACCEPT
-A FORWARD -i eth5 -o eth7 -j ACCEPT
-A FORWARD -i eth6 -o eth7 -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Thu Mar 27 05:15:29 2025
# Generated by iptables-save v1.8.9 (nf_tables) on Thu Mar 27 05:15:29 2025
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o eth7 -j MASQUERADE
COMMIT
# Completed on Thu Mar 27 05:15:29 2025
